--- a/README
+++ b/README
@@ -8,7 +8,7 @@ fluxus is released under the GPL licence.
 
 see INSTALL for information on building
 
-help? see docs/examples, or dave@pawfal.org
+help? see docs and examples, or dave@pawfal.org
 check the wiki at www.pawfal.org for more scripts
 
 www.pawfal.org
