--- a/README
+++ b/README
@@ -11,4 +11,4 @@ see INSTALL for information on building
 help? see docs and examples, or dave@pawfal.org
 check the wiki at www.pawfal.org for more scripts
 
-www.pawfal.org
+www.pawfal.org/nebogeo
