examples updates, added feedback

--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,8 @@ added:
 (build-sliderjoint)
 (build-amotorjoint)
 (joint-param)
+big document update
+loads more scripts, including live ones
 
 0.6
 
